Revert: apps/emqx_conf/ の変更を取り消し

--- a/apps/emqx_conf/etc/emqx_conf.conf
+++ b/apps/emqx_conf/etc/emqx_conf.conf
@@ -8,7 +8,7 @@
 ## Configuration full example can be found in etc/examples
 
 node {
-  name = "semqx@10.20.22.169"
+  name = "emqx@127.0.0.1"
   cookie = "{{ emqx_default_erlang_cookie }}"
   data_dir = "{{ platform_data_dir }}"
 }
