--- a/rel/config/examples/sysmon.os.conf.example
+++ b/rel/config/examples/sysmon.os.conf.example
@@ -4,11 +4,10 @@ sysmon.os {
     ## Time interval for the periodic CPU check
     cpu_check_interval = 60s
 
-    ## For how much system cpu can be used before the corresponding alarm is raised
-    cpu_high_watermark = 80%
-
-    ## For how much system cpu can be used before the corresponding alarm is cleared
-    cpu_low_watermark = 60%
+    ## CPU monitoring now uses dynamic threshold based on core count (cores * 0.8)
+    ## The old cpu_high_watermark and cpu_low_watermark settings are no longer used
+    ## CPU usage is monitored using cpu_sup:avg1() which returns load average
+    ## Load average > (cores * 0.8) triggers high CPU usage alarm
 
     ## Time interval for the periodic memory check
     ## Possible values:
